--- a/index.html
+++ b/index.html
@@ -235,20 +235,20 @@
                 <p class="name">Nikola Tesla</p>
                 <p class="name">339 5th Ave, New York</p>
                 <div class="contact1">
-                    <img src="./Img/Phone.png" alt="Phone">
+                    <img src="./img/Phone.png" alt="Phone">
                     <a href="tel:+380999999999999"> +38 (099) 999-99-99</a>
                 </div>
                 <div class="contact2">
-                    <a href="vibr: chat?number=%2B380999999999"><img src="./Img/viber.png" alt="Viber"></a>
+                    <a href="vibr: chat?number=%2B380999999999"><img src="./img/viber.png" alt="Viber"></a>
                     <a href="tg://resolve?domain=nikname"><img src="./img/telegram_icon.png" alt="Telegram"></a>
-                    <a href="whatsapp://send?phone=+380999999999"><img src="./Img/whatsapp.png" alt="WhatsApp"></a>
+                    <a href="whatsapp://send?phone=+380999999999"><img src="./img/whatsapp.png" alt="WhatsApp"></a>
                 </div>
                 <div class="contact1">
-                    <img src="./Img/instagram.png" alt="Instagram">
+                    <img src="./img/instagram.png" alt="Instagram">
                     <a href="https://www.instagram.com/">dr.NikTes</a>
                 </div>
                 <div class="contact1">
-                    <img src="./Img/Email.png" alt="Email">
+                    <img src="./img/Email.png" alt="Email">
                     <a href="mailto^:dr.niktes@gmail.com"> dr.niktes@gmail.com</a> <br>
                 </div>
                 <p class="copyrigth">&copy; Copyrigth 2022 </p>
